fixed reservation shift

--- a/src/modules/reservations/reservation.scss
+++ b/src/modules/reservations/reservation.scss
@@ -1,5 +1,7 @@
 .reservation {
     padding: 120px 0;
+    display: flex;
+    justify-content: center;
     &__container{
         position: relative;
         text-align: center;
